--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -4,7 +4,8 @@
 <h1 id="sec0">
     How to learn stuff
 </h1>
-<p>
+<div class="text-justify">
+<p class="text-justify">
     Prvním krokem mého sebevzdělání v rámci tohoto blogu je samotný proces
     učení. Jakožto první článek, bude především adresován mě, aby mi sloužil
     jako průvodce světem dlouhodobého učení. Velmi jsem se inspiroval knihou
@@ -16,22 +17,24 @@
     zkoušky jen proto, abych dané vědomosti za 14 dní zahodil. Toto je mou
     motivací.
 </p>
-<p>
+<blockquote><p>
     You can have sucess or excuses, but you can´t have both.
     <br/>
     Every excuse you accept makes you weaker.
     <br/>
     Do any of your excuses really enhance and empower your life?
-</p>
+</p></blockquote>
 <p id="sec-conclusion">
     Mindmap of Unlimited memory:
 </p>
 <p>
     <strong>WHY</strong>
     <br/>
+    <p class="text-justify">
     Každý krok by měl začít tímto slovem. Proč. Proč se chci danou dovednost
     naučit, co mi to dá? Posune mě dál? Sepišme si tedy každý list důvodů, za
     mě tento:
+    </p>
 </p>
 <p>
     Chci být každý den dále než ten předešlý a naučit se novým věcem
@@ -71,10 +74,12 @@
 <p>
     <strong>QUESTIONS AND INSIGHTS</strong>
     <br/>
+    <p class="text-justify">
     V rámci sebereflexe je nutno si položit následující otázky. Člověk musí své
     víry testovat a rozšiřovat, jinak je uvězněn v jejich mezích. Nejvíce se mi
     vybavuje Shia LeBoeuf: Yes you can! Just do it! Tento výrok bez jaké kolik
     pochyby by měl být vaší oporou. Vše je možné pro neuvězněnou mysl.
+    </p>
     <br/>
     <br/>
     Co tě limituje? Nejsi to ve skutečnosti ty sám?
@@ -83,13 +88,13 @@
     <br/>
     Čemu věříš o své mysli a potenciálu?
 </p>
-<p>
+<blockquote><p>
     If you don´t like how things are, change it! You´re not a tree.
-</p>
+</p></blockquote>
 <h1 id="sec1">
     1. Koncentrace
 </h1>
-<p>
+<p class="text-justify">
     Co nás činí zajímavými oproti jiným zvířatům je, že dokáže přemýšlet o
     myšlení. Koncentrace je dovednost jako každá jiná, a tedy je ji možno
     zdokonalovat. V dnešní době žijeme v iluzi aktivity, do ničeho nevkládáme
@@ -105,13 +110,13 @@
 <h2>
     1.1 Váš vnitřní hlas
 </h2>
-<p>
+<p class="text-justify">
     Samozřejmě, každý má svůj vnitřní hlas. Ten hlas často našeptává, a velmi
     často tzv. „buzeruje“. Člověk si snadněji všimne špatného než dobrého,
     zkuste tedy svůj hlas „načapat“ ve svých dobrých chvílích. Kdy jste se
     dneska dobře soustředili? Pochvalte se.
 </p>
-<p>
+<p class="text-justify">
     Často tento hlas přichází s velmi negativními emocemi, šeptá že jste
     bezcenní a zbyteční. V žádném případě s ním nesouhlaste, je to jen prchavá
     myšlenka, které pouze vy dáváte možnost růst a přiživujete ji. Když si dáte
@@ -120,7 +125,7 @@
 <h2>
     1.2 Multitasking
 </h2>
-<p>
+<p class="text-justify">
     Největším nepřítelem koncetrace je multitaking. Multitasking je mýtus. Vždy
     se zabýváme jednou věcí sériově s druhou, nikdy však paralelně (možné pro
     lidi s oddělenými mozkovými hemisférami). Když děláme více věcí najednou,
@@ -130,7 +135,7 @@
     Již nedokážeme řídit automobil bez rádia či zapnout televizi a sledovat
     jeden program.
 </p>
-<p>
+<p class="text-justify">
     Multitasking je známý tím, že zpomaluje lidi o 50% a zvyšuje chybovost o
     50%. Vyhraďte si proto čas a dělejte pouze jednu danou věc celým svým
     bytím. Lidé jsou náchylní k tomu, aby jejich koncentrace byla roztroušena.
@@ -139,7 +144,7 @@
     odvedení úlohy moderní doby již moc ne. Pokud se plně soustředíte, vaše
     mysl bude tam, kde ji zrovna potřebujete.
 </p>
-<p>
+<p class="text-justify">
     Při vašem dalším učení se pokuste zabývat na daný časový úsek pouze na něj
     ( mě se osvědčila metoda 20/5 – 20 minut plné koncentrace a 5 minut pauza,
     dejte si však pozor, potřebujete časovač, jinak se v těch pěti minutách
@@ -148,11 +153,11 @@
 <h2>
     1.3 Učte se se záměrem
 </h2>
-<p>
+<p class="text-justify">
     Lidi bezhlavě čtou informace, očekávajíce že si je zapamatují. Takto to
     však pro náš mozek nefunguje. Podívejme se na metodu <strong>PIC</strong>:
 </p>
-<p>
+<p class="text-justify">
     <strong>P</strong>
     urpose – Neustále mějte na zřeteli proč čtete nebo proč se něco učíte.
     Pokud nevíte co chcete, jak budete vědět že jste to získali? Učení se se
@@ -160,7 +165,7 @@
     vašich myšlenek. Pokud si nebudete jistí proč něco děláte, můžete to dělat
     pořád dokola bez značného posunu.
 </p>
-<p>
+<p class="text-justify">
     <strong>I</strong>
     nterest – Pokud nemáte zájem o danou problematiku, zapamatovat si
     „nezajímavé“ informace bude velmi těžké. Zase naopak pokud jste pro nějaký
@@ -171,16 +176,16 @@
     zajímat pro vás zajímavějším věcem. Vaše mysl se vždy bude ubírat k věcem
     které vás zajímají.
 </p>
-<p>
+<p class="text-justify">
     Jak tedy z nudných informací udělat zajímavé? Každou nudnou informaci lze
     ozvláštnit otázkami typu Co mi to přinese? Jak se toto téma využívá v praxi
     na věci které mě zajímají? Jak se to pojí s mým životem? Jak mi mi to
     pomůže v budoucnu nebo pro uskutečnění mých cílů?
 </p>
-<p>
+<blockquote><p>
     There are no unintersting things, only uninterested people
-</p>
-<p>
+</p></blockquote>
+<p class="text-justify">
     <strong>C</strong>
     uriosity – Pěstujte svoji zvědavost, díky ní se nebudete nikdy nudit.
     Přemýšlejte o věcech kolem vás, jak fungují a následně jak by jste je
@@ -195,14 +200,14 @@
     <br/>
     Jak mě tyto informace učiní více významným? Jak mě obohatí?
 </p>
-<p>
+<blockquote><p>
     If you want to cure boredom, be curious. Then, you´ll want to study, you´ll
     be genuinely interested in learning stuff
-</p>
+</p></blockquote>
 <h2>
     1.4 Přestaňte si dělat starosti
 </h2>
-<p>
+<p class="text-justify">
     Jelikož nemáte psychotronické schopnosti, přestaňte si dělat starosti nad
     věcmi, které nemůžete ovlivnit. Pokud se soustředíte pouze na sebe, budete
     mít čistou hlavu. Nepřemýšlejte nad otázkami Co kdyby?, raději si položte
@@ -211,26 +216,26 @@
     je právě teď. Co kdyby nic neřeší. Jak můžete vědět výsledek, když si jej
     pouze domyslíte?
 </p>
-<p>
+<p class="text-justify">
     Chcete zlepšit svou koncentraci nebo ne? To je jediná otázka na kterou
     stojí odpovědět, zbytek je dělání si starostí.
 </p>
 <h1 id="sec2">
     2. Základy
 </h1>
-<p>
+<p class="text-justify">
     Fotogenická paměť jak si ji mnoho lidí představuje neexistuje. Perfektní
     paměť je dovednost, ne vrozený dar. Jak tedy dostat informace do mozku tak
     aby se zachytily a netvořili tzv. efekt jedním uchem dovnitř a druhým ven?
     Je nutno přivést informace k životu.
 </p>
-<p>
+<p class="text-justify">
     Pokud pasivně čtete, téměř nic si nezapamatujete. Naopak ku příkladu
     čtete-li novelu či nějaký příběh, představujete si dané situace a
     jednostivé postavy. Využíváte své kreativity, jež je právě klíčovou složkou
     neomezené paměti.
 </p>
-<p>
+<p class="text-justify">
     Mnoho lidí se snaží zapamatovat si informace na základě zvuků, snaží se
     znovu a znovu opakovat dané slovo či text a doufají, že se jim v hlavě
     nějak informace vryje. Navíc, pokud si pamatujeme zvuk, tak když jej
@@ -239,14 +244,14 @@
     které se samy navádí aby se v naší mysli poskládaly celé. Budeme tedy pro
     záměry pamatování užívat představivost.
 </p>
-<p>
+<p class="text-justify">
     Čím více změníme informace v obrazy či filmy, tím více si zapamatujeme a
     pochopíme. Proto budeme používat princip „SEE"
 </p>
 <h2>
     2.1 Princip SEE
 </h2>
-<p>
+<p class="text-justify">
     <strong>S</strong>
     - Senses/Smysly: Musíme používat naše smysly abychom cokoliv dostali do
     naší hlavy. Stejně tak si pomocí nich vybavíme uložené informace. Jako
@@ -255,18 +260,18 @@
     Nepředstavili jste si slovo kočka, zažili jste multismyslový vjem. Pokuste
     se stejnou situaci znovu vybavit. Je to jednoduché však?
 </p>
-<p>
+<p class="text-justify">
     <strong>E</strong>
     - Exaggeration/Přeháňka(:D): Co je jednodušší si zapamatovat? Normální
     jahodu nebo takovou velikosti dvoupodlažního domu? Pokuste se vaše obrazy
     tvoři odlišné od běžné reality. Nemusí se to týkat pouze velikosti. Jako
     příklad oblečte banán do županu.
 </p>
-<p>
+<p class="text-justify">
     Snažte se vytvořit směšné objekty, nikde není napsáno že učení nemůže být
     zábavné a vědomosti musí být statická složka s fakty. Užijte si to!
 </p>
-<p>
+<p class="text-justify">
     <strong>E</strong>
     - Energize/Oživování: Dejte svým obrazům pohyb. Představte si výše zmíněný
     banán jak cvičí Taekwondo. Snažte se činit své obrazy barevné, střeštěné, a
@@ -274,7 +279,7 @@
     vlnění, let, cokoliv vás napadne. Vzpomeňte si na nezapomenutelné pohádky a
     které pohyby se vám vryly nejvíce do paměti.
 </p>
-<p>
+<p class="text-justify">
     Když si čtete nebo posloucháte, využívejte princip SEE. Z osobní zkušenosti
     jsem nedávno poslouchal audioknihu Mycelium. Díky tomuto sluchovému vjemu
     jsem si v hlavě zkonstruoval celý svět, do kterého nás posluchače autorka
@@ -284,14 +289,14 @@
     vtipného. Nezapomeňte ze svých obrazů dělat filmy, pohyb je pro lidský
     mozek nejlépe zapamatovatelný, přitahuje naši pozornost oproti statice.
 </p>
-<p>
+<p class="text-justify">
     Většina lidí takto přirozeně nemyslí, nevěšte hlavu, je to pohým tréninkem.
     Lidský mozek se neustále obnovuje, je jen na vás zda-li stejně či jinak.
     Čím více budete učívat svou představivost, tím více budete znát, dokážete
     spojovat zdánlivě nespojitelné věci a ve své mysli tím vytvoříte síť na
     kterou se budou chytat nové informace.
 </p>
-<p>
+<p class="text-justify">
     Jak ovšem převést abstraktní pojmy do obrazů s významem? Snažte se je
     nahradit. Jako příklad dám např. slovo Washington. Představte si chlápka,
     jenž umývá závaží o hmotnosti jedné tuny. Ze začátku to pro vás bude nové,
@@ -313,7 +318,7 @@
     <br/>
     Red is Aka - Imagine Red Ak-47 :D The crazier the better
 </p>
-<p>
+<p class="text-justify">
     Jak jistě chápete, občas vás bude omezovat možnost, kdy nebudete vědět jak
     dané slovo nahradit. Je to úplně normální. Zkuste teď sami si udělat
     asociace k následujícím slovům v závorce asociační nápověda:
@@ -325,12 +330,12 @@
     <br/>
     Question is Shitsumon (Shit summon)
 </p>
-<p>
+<p class="text-justify">
     Pokud si pojmy spojíte s roztodivnými a šílenými představami, jen tak se
     vám z hlavy nevypaří, ovšem je třeba je osvěžovat, to si ukážeme v dalších
     kapitolách. Tuto pomůcku lze použít na vše.
 </p>
-<p>
+<p class="text-justify">
     Paměť není věcí která se vám stane, právě vy si vytváříte vzpomínky.
     Dokážete přetvořit jakoukoli informaci na těco co dává smysl právě vám.
     Proto neberte moje asociace doslova, pokud se vymyslíte lepší, užijte ji.
@@ -340,24 +345,24 @@
 <h1 id="sec3">
     3. Techniky
 </h1>
-<p>
+<p class="text-justify">
     Máme tedy živé obrazy, jenomže kam je v mysli zařadit? Naše mysl se
     rozděluje na tři kategorie. Krátkodobá, dlouhodobá a něco mezi tím. Dále
     budu používat následující zkratky: SHT - short term memory, MTM - middle
     term memory a LTM - long term memory.
 </p>
-<p>
+<p class="text-justify">
     Nyní se pokusme něco společně naučit.
 </p>
 <h2>
     3.1 Metoda CAR
 </h2>
-<p>
+<p class="text-justify">
     Představte si vaše rodinné auto, jistě jej dobře znáte a dokážete se v něm
     pohybovat. Toto auto je součástí vaší LTM. Při jednotlivých předmětech
     užijte metodu SEE.
 </p>
-<p>
+<p class="text-justify">
     Vražte červené jablko do přední masky auta, udělejte z něj jaguára vražením
     mrkve do předku kapoty, na přední okno vám někdo hodil krajíc celozrnného
     chleba, bojíte se že pokud použijte stěrače, poškodíte si stěrače, následně
@@ -375,19 +380,19 @@
     Když se sehnete k výfuku, vidíte že zněj roste brokolice a kapusta. V
     neposlední řadě jsou vaše pneumatiky z batátů. No vážně, z batátů!
 </p>
-<p>
+<p class="text-justify">
     Nyní projděte skrz naskz vaše auto a zkuste vidět všechny věci které jsem
     zmínil. Pokud se nějaký pojem neujal, vraťte se k němu a zkuste silnější
     asociaci.
 </p>
-<p>
+<p class="text-justify">
     Co jsme se nyní společně naučili je 14 jídel jenž podporují vitalitu a
     udržují vaši mysl aktivní a v pozoru. Ne jenomže tento list umíte postupně,
     vy jej umíte i obráceně a na přeskáčku. Dokážete odpovědět na otázku co
     máte na zadních sedadlech? A na čem jste to na sedadle řidiče seděli? Jak
     jistě pozorujete, je to velmi jednoduché. Proč to tak tedy je?
 </p>
-<p>
+<p class="text-justify">
     Musíme si uvědomit, že jsme zkombinovali něco co již známe s novými
     informacemi, neboli analyticky STM+LTM=MTM. Nové informace lze jednoduše
     zachytávat na již uložené LTM. Použitím této metody také systematicky
@@ -396,10 +401,10 @@
     jídlovitě vylepšili. Jelikož jste přidělili informacím jejich místo, máte v
     hlavě pořádek a nemusíte dané informace lovit v moři.
 </p>
-<p>
+<p class="text-justify">
     Nyní přejdeme k abstraktním pojmům.
 </p>
-<p>
+<p class="text-justify">
     Naučme se Sedm návyků velmi efektních lidí. Když budete tyto pojmy nosit s
     sebou, snadněji si můžete ověřit, zda-li se jimi řídíte. Nezapomeňte, že
     čím více toho víte, tím snadněji se ještě více naučíte (SEE).
@@ -438,21 +443,21 @@
     7. Nabruste si pilu (Bez dobrého nářadí se špatně dělají věci) - Představte
     si ostrou pilu jak se zařezává do pneumatik automobilu
 </p>
-<p>
+<p class="text-justify">
     Snažte se použít co nejméně obrazů při zapamatování si nejvíce. Čím
     jednodušší si to pro sebe uděláte, tím méně se budete cítit zavaleni novými
     informace (pocit, že vám pukne hlava).
 </p>
-<p>
+<p class="text-justify">
     1,2,3 jsou vaše Osobní výhry: předek auta náleží pouze řidiči. 4,5,6 -
     Veřejné výhry: Do svého auta dovolíte sednout i jiným lidem než vy. 7 je
     mimo auto: Značka kontroluje, jak se auto na cestě ovládá.
 </p>
-<p>
+<p class="text-justify">
 Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlTxC4QG8g">video</a> pro
     vysvětlení jednotlivých pojmů.
 </p>
-<p>
+<p class="text-justify">
     V této kapitole jsme se tedy naučili 21 kousků informací, které nám pomůžou
     na cestě k Unlimited Memory. Metoda CAR vám pomůže zorganizovat informace,
     které patří k sobě avšak mají různé významy. Samozřejmě můžete používat
@@ -463,12 +468,12 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
 <h2>
     3.2 Pro zapamatování použijte své tělo
 </h2>
-<p>
+<blockquote><p>
     „The music of your life is far better played with all the fingers of your
     Multiple Intelligences performing their magic on the keyboard of your
-    existence" - Tony Buzan
-</p>
-<p>
+    existence"</p><footer>Tony Busan</footer>
+</blockquote>
+<p class="text-justify">
     Každý člověk má vícero druhů inteligencí, díky tomu je každý z nás
     jedinečný a úžasný. Dobrá metoda pro zapamatování si těchto inteligencí je
     tzv. Metoda těla. Budeme používat naše tělo pro zapamatování nových
@@ -476,54 +481,54 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     abstraktní, tudíž budeme muset užít naší kreativitu pro vytvoření
     dostatečných SEE asociací.
 </p>
-<p>
+<p class="text-justify">
     V chodidlech uložíme Kreativní inteligenci. Představte si že stojíte na
     rozsvěcené žárovce (taková ta jež se používá pro znázornění nápadu), je
     velmi žhavá poskakujete na ni a pálí vám vaše chodidla.
 </p>
-<p>
+<p class="text-justify">
     Osobní inteligence se nachází ve vašich kolenou, je to zodpovědnost.
     Představte si, že pokud musíte nějakou osobu nakopnout, budete za to
     zodpovědni.
 </p>
-<p>
+<p class="text-justify">
     Na vašich stehnech se pořádá seznamovací párty, je to zosobnění vaší
     Sociální inteligence, opravdu si představte DJ pult a létající nafukovací
     zvířata nad davem na vašich stehnech.
 </p>
-<p>
+<p class="text-justify">
     Následující inteligenci uložíme do vašeho pasu. Bude to Spirituální
     inteligence. Představte si že kolem pasu vám jezdí papež v papamobilu nebo
     Ouroboros se vám neustále obtáčí kolem pasu. Nyní si zopakujte všechny
     dosud uložené inteligence. Kreativní, Osobní, Sociální, Spirituální.
 </p>
-<p>
+<p class="text-justify">
     Dále je vaše Fyzická inteligence. Uložte ji do břicha, představte si že vám
     je špatně a fyzicky se tedy necítíte dobře nebo použijte pozitivní obraz,
     kdy po fyzickém cvičení budete mít na břiše dokonalou vánočku.
 </p>
-<p>
+<p class="text-justify">
     V levé ruce uložte Smyslovou inteligenci. Levou rukou si utírejte nos,
     mněte si oči a strčte si prst do ucha.
 </p>
-<p>
+<p class="text-justify">
     V pravé ruce bude vaše Sexuální inteligence. Zde si vymyslete co uznáte za
     vhodné.
 </p>
-<p>
+<p class="text-justify">
     Takže máme Kreativní, Osobní, Sociální, Spirituální, Fyzickou, Smyslovou a
     Sexuální inteligenci.
 </p>
-<p>
+<p class="text-justify">
     Nyní k vašim ústům přiřadíme Verbální inteligenci. Když můžete, pomožte si
     jednoduchostí, ale stejně použijte metodu SEE.
 </p>
-<p>
+<p class="text-justify">
     Na vašem nose je prázdný prostor, ke kterému se blíží vesmírná loď
     (spaceship), na váš nos následně přistane. Toto je prostor pro vaši
     Prostorovou inteligenci.
 </p>
-<p>
+<p class="text-justify">
     Vaše vlasy se zakrucují a vytvářejí algebraické vzorce, kroutí se do nul,
     šestek a devítek, tvoří smyčky a kruhy. Zde uložte vaši Numerickou
     inteligenci.
@@ -572,24 +577,25 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
 <p>
     10. Numerická inteligence
 </p>
-<p>
+<p class="text-justify">
     V dnešní době inteligence je velmi důležité věděť o vašich úžasných
     inteligencích. Na vaše tělo se budou velmi snadno nabalovat další zmínky a
     jednoduše si je dáte do souvislostí. Například když se někdo zmíní o IQ
     testech, hned si vzpomenete že tyto testu ohodnocují pouze tři inteligence
     které máte uloženy na své hlavě.
 </p>
-<p>
+<p class="text-justify">
     Mnoho znás bylo naučeno že je buď chytrá nebo hloupá. Nyní však můžete
     udělat analýzu vaší osobnosti, za mě třeba vím že mám rezervy ve Verbální a
     Sociální inteligenci.
 </p>
-<p>
+<p class="text-justify">
     Metodu těla lze užít na vše od nákupních seznamů až po učení se na zkoušky.
     Důležité je však vždy užít metodu SEE, pociťujte, přehánějte a rozpohybujte
     vaše informace, a to nejlépe ještě nějakou humornou cestou. Můžete mít své
     informace ve vlastních rukou.
 </p>
+</div>
 
 
  {% endblock %}
