adding another part of unlimited memory

--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -52,7 +52,6 @@
     <br/>
     Nikdy není pozdě ani brzy, je však třeba začít hned nebo nikdy
     <br/>
-    <br/>
     <strong>BELIEFS</strong>
     <br/>
     Jseš to čemu věříš, toto je velmi důležité si uvědomit, proto použij
@@ -80,8 +79,6 @@
     vybavuje Shia LeBoeuf: Yes you can! Just do it! Tento výrok bez jaké kolik
     pochyby by měl být vaší oporou. Vše je možné pro neuvězněnou mysl.
     </p>
-    <br/>
-    <br/>
     Co tě limituje? Nejsi to ve skutečnosti ty sám?
     <br/>
     Nemůžeš se zlepšit nebo pro to neděláš dost?
@@ -594,6 +591,72 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     Důležité je však vždy užít metodu SEE, pociťujte, přehánějte a rozpohybujte
     vaše informace, a to nejlépe ještě nějakou humornou cestou. Můžete mít své
     informace ve vlastních rukou.
+</p>
+<h2>
+    3.3 Metoda PEG
+</h2>
+<p class="text-justify">
+    Síla našich asociací je velmi obdivuhodná. Vytvoříme si tzv. pegy(věšáky).    
+    Díky ním získáme kolem 40 míst pro rychlé ukládání. Existují dvě PEG metody,
+    Rýmovací PEG a Tvarová PEG. Nezapomeňte, že vaše pegy musí být součástí vaší
+    LTM aby fungovaly. Získáme tedy šatník, ve kterém zavěsíme pegy v daném pořadí.
+</p>
+<p>
+    Jedna se rýmuje s Bedna (One-Bun)
+    <br/>
+    Dva - Bitva (Two-Shoe)
+    <br/>
+    Tři - Bratři (Three-Tree)
+    <br/>
+    Čtyři - Mušketýři (Four-Door)
+    <br/>
+    Pět - Oběd (Five-Hive)
+    <br/>
+    Šest - Pěst (Six-Sticks)
+    <br/>
+    Sedm - Dům (Seven-Heaven)
+    <br/>
+    Osm - Osud (Eight-Gate)
+    <br/>
+    Devět - Medvěd (Nine-Vine)
+    <br/>
+    Deset - Viset (Ten-Hen)
+</p>
+<p class="text-justify">
+    Nyní pomocí SEE si přiřaďte tyto slova k číslům. V knize Antony Robbina - 
+    Awaken the Giant Within, se mluví o Deseti Emocích Síly. Zapamatujte si je,
+    můžete se zdokonalovat jen tehdy když si pamatujete, jak se podle toho chovat.
+</p>
+<p>
+    Tyto Emoce Síly jsou následující:<br/>
+    1. Láska a vřelost (Love and warmth)<br/>
+    2. Uznání a vděk (Appreciation and gratitude)<br/>
+    3. Zvědavost (Curiosity)<br/>
+    4. Nadšení a vášeň (Excitement and passion)<br/>
+    5. Odhodlanost (Determination)<br/>
+    6. Flexibilita (Flexibility)<br/>
+    7. Smělost (Confidence)<br/>
+    8. Veselost (Cheerfulness)<br/>
+    9. Vitalita (Vitality)<br/>
+    10.Přínos (Contribution)<br/>
+</p>
+<p class="text-justify">
+    Vytvořte nelogické obrazy SEE společně se silnými asociacemi. Vyhraďte si čas
+    právě teď. Pokud vám to pomůže, kreslete si.
+</p>
+<p class="text-justify">
+    Jedna bedna ve tvaru srdce, rozehřátá vřelostí u krbu. Nebo v bedně/krabici
+    najdete srdce, jež pomalu pulzuje vlnami teplé vřelosti. <br/>
+    Dva bitva, Po bitvě si soupeři podají ruce a poděkují za vzájemný zápas.<br/>
+    Tři bratři, za mě pověst o třech bratřích padajících do studny ze zvědavosti.<br/>
+    Čtyři mušketýři, Alexandr Dumas, představte si D´Artagnana.<br/>
+    Pět, je čas oběd, ten oběd u babičky jste odhodlani sníst celý za každou cenu.<br/>
+    Šest pěst, Pěst je velmi flexibilní, vyzkoušejte si to.<br/>
+    Sedm dům, rozhodněte že si koupíte dům nebo se nebojíte provádět hosty po vašem domě.<br/>
+    Osm osud, co jiného vám zbývá než se smát při neblahém osudu, nebo se smějte
+    společně s kartářkou, která vytáhla místo tarotu karty hrací. <br/>
+    Devět medvěd, medvěd dělá zdvihy na větvi stromu, aby se dostal k medu nad ním.<br/>
+    Deset viset, váš projekt je vánoční strom, na kterém visí lidé, jež něco tomuto projektu přispěli.
 </p>
 </div>
 
