New text + images styling

--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -54,10 +54,10 @@
     <br/>
     <br/>
     <strong>BELIEFS</strong>
-    <br/>
+    <p>
     Jseš to čemu věříš, toto je velmi důležité si uvědomit, proto použij
     následující víry:
-    <br/>
+    <p/>
     <br/>
     Nejsi limitován vrozenými limity
     <br/>
@@ -409,8 +409,7 @@
 </p>
 <p>
     <img
-        width="605"
-        height="454"
+        class="img-responsive center-block img-rounded"
         src="static/img/CAR.jpg"
     />
 </p>
@@ -659,7 +658,93 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     Devět medvěd, medvěd dělá zdvihy na větvi stromu, aby se dostal k medu nad ním.<br/>
     Deset viset, váš projekt je vánoční strom, na kterém visí lidé, jež něco tomuto projektu přispěli.
 </p>
-</div>
+<p class="text-justify">
+    Jakmile si vytvoříte dostatečně silné asociace, tyto emoce budete znát od začátku,
+    od konce, ale i v náhodném pořadí. Vyskoušejte to na sobě.
+</p>
+<p class="text-justify">
+    Tato rýmovací metoda se dá rozšířit o další seznamy, avšak v českém jazyce
+    je velmi těžké najít rýmy k číslům, které často nemají ani samohlásku.
+</p>
+<p class="text-justify">
+    Lepší je použít druhou zmíněnou Tvarovou PEG metodu, kde zaměníte čísla za tvary.
+    Tady vám nechám volný prostor pro vaše nápady.<br/>
+    Pokud si budete chtít nechat poradit, tak konzultujte <a href="http://www.memory-improvement-tips.com/remembering-lists.html#shape">zde</a>.
+</p>
+<p class="text-justify">
+    Neomezujte se pouze na čísla, využijte jakýkoliv seznam, který znáte nazpaměť,
+    ať je to soupiska hráčů, složení kapely, či vaše oblíbené postavy seriálů.
+</p>
+<h2>3.4. Palác mysli</h2>
+<p class="text-justify">
+    Tato metoda je velmi podobná metodě CAR a užití svého těla, avšak místo 
+    konkrétního objektu používáme nějakou organizovanou lokaci, jako je rozvržení domácnosti
+    či místnosti nebo cestu domů nebo do obchodu.<br/>
+    
+    <strong>1. Připravte si místo</strong><br/>
+    <strong>2. Vytvořte úložiště</strong><br/>
+    <strong>3. Zapamatujte si</strong><br/>
+    <strong>4. Uložte a spojte</strong><br/>
+</p>
+<p class="text-justify">
+    Je to v celku jednduché. Najdete si lokaci jako třeba cestování, výlet, dojíždění,
+    nebo budovu, kterou si dobře zapamatujete. Nemusí to být nutně existující místo.
+    Co uděláte pak je, že v této lokaci vytvoříte úložiště, tedy objekty, ke kterým
+    dokážete přiřadit věc, kterou si chcete zapamatovat. Snažte se aby tyto objekty
+    měly mezi sebou nějakou návaznost. Poté přiřadíte vámi požadované informace
+    k úložištím pomocí metody SEE. Propojte jednotlivá úložiště. Opět používáte 
+    princip LTM + STM = MTM
+</p>
+<p class="text-justify">
+    Nejlepší si to bude ukázat na příkladu<br/>
+    Zapamatujme si 12 klíčových atributů pro úspěch a naplnění ve vašem životě
+    od Johna C. Maxwella. Nazývá je Denní Tucet (The Daily Dozen)<br/>
+    <strong>1. Přístup      (Attitude)</strong><br/>
+    <strong>2. Priority     (Priorities)</strong><br/>
+    <strong>3. Zdraví       (Health)</strong><br/>
+    <strong>4. Rodina       (Family)</strong><br/>
+    <strong>5. Přemýšlení   (Thinking)</strong><br/>
+    <strong>6. Závazek      (Commitment)</strong><br/>
+    <strong>7. Finance      (Finances)</strong><br/>
+    <strong>8. Víra         (Faith)</strong><br/>
+    <strong>9. Vztahy       (Relationships)</strong><br/>
+    <strong>10.Štědrost     (Generosity)</strong><br/>
+    <strong>11.Hodnoty      (Values)</strong><br/>
+    <strong>12.Růst         (Growth)</strong><br/>    
+</p>
+<p class="text-justify">
+    Mnoho nezasvědcených lidí by se pokoušelo neustále opakovat tento list, aby
+    si jej vštípili do paměti. Rutinní učení a neustálé opakování vede k averzi
+    k učení a je velmi frustrující. Pojďme tedy na to efektivnějším způsobem.
+</p>
+<p class="text-justify">
+    Použiji čtyři místnosti v mém domě jako cestu, abych vám udělal obrázek jak
+    tento systém funguje. Místnosti jsou úseky mé mysli, ve kterých dokážu uložit
+    nové informace. Nechte mě vás provést domem a pojďme společně uložit nové informace.
+</p>
+<p class="text-justify">
+    Nutná vlastnost pro vaše úložiště je, aby byly v jednoduchém pořadí. Tyto
+    prostory musí být pospolu, ale i rozložené, např. kuchyň - špíz, lednice, vařič, dřez.
+    Tady je mentální mapa čtyř místností v mém domě a s nimi spjatých 12 úložišť,
+    které použijeme
+</p>
+<p>
+    Místnost 1 Kuchyně :    1.Myčka     2.Lednička  3.Sporák<br/>
+    Místnost 2 Obývák  :    4.Židle     5.Televize  6.Rotoped<br/>
+    Místnost 3 Ložnice :    7.Zrcadlo   8.Skříň     9.Postel<br/>
+    Místnost 4 Koupelna:    10.Vana     11.Sprcha   12.Toaleta
+</p>
+<p class="text>
+    <img
+        class="img-responsive center-block img-rounded"
+        src="static/img/House.jpg"
+    />
+</p>
+<p class="text-justify">
+    
+</p>
+<p class="text-justify"></p>
+    </div>
 
 
  {% endblock %}
