Mind Palace introduction

--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -414,30 +414,30 @@
     />
 </p>
 <p>
-    1. Proaktivita - Představte si profesionálního hráče golfu, který je
+    <strong>1. Proaktivita</strong> - Představte si profesionálního hráče golfu, který je
     zároveň aktivní jako včela
 </p>
 <p>
-    2. Přemýšlejte nad koncem - Vaše mysl běží závod a přemýšlí kdy už bude v
+    <strong>2. Přemýšlejte nad koncem</strong> - Vaše mysl běží závod a přemýšlí kdy už bude v
     cíli
 </p>
 <p>
-    3. Hlavní věci na první místo - Výherce závodu dáme na bednu na první místo
+    <strong>3. Hlavní věci na první místo</strong> - Výherce závodu dáme na bednu na první místo
 </p>
 <p>
-    4. Win/Win - Vyhrát nemusí jen jeden, představte si více pohárů pro první
+    <strong>4. Win/Win</strong> - Vyhrát nemusí jen jeden, představte si více pohárů pro první
     místo
 </p>
 <p>
-    5. Snažte se nejdřív porozumět, až pak být pochopen - Sedící člověk na
+    <strong>5. Snažte se nejdřív porozumět, až pak být pochopen</strong> - Sedící člověk na
     pláži se snaží porozumět neznámému okolí, až pak může dělat něco jiného
 </p>
 <p>
-    6. Spolupráce - Značka, jež balancuje na kraji automobilu musí použít
+    <strong>6. Spolupráce</strong> - Značka, jež balancuje na kraji automobilu musí použít
     spolupráci všech svých smyslů
 </p>
 <p>
-    7. Nabruste si pilu (Bez dobrého nářadí se špatně dělají věci) - Představte
+    <strong>7. Nabruste si pilu</strong> (Bez dobrého nářadí se špatně dělají věci) - Představte
     si ostrou pilu jak se zařezává do pneumatik automobilu
 </p>
 <p class="text-justify">
@@ -741,7 +741,44 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     />
 </p>
 <p class="text-justify">
-    
+    Začínáme v kuchyni. Prvním slovem je přístup. Znáte někoho se špatným přístupem?
+    Šup s ním do myčky, očistěje jej od něj. Představte si jak následně již čistý vylézá.
+    <br/>
+    Další tady máme priority. Napiště je všechny na dveře lednice, použijte centropen,
+    vaše priority jsou pro vás důležité, nepůjde je jen tak lehce smýt.
+    <br/>
+    U sporáku velmi zdravý kulturista peče zdravé pochutiny a právě je strká do trouby.
+    <br/>
+    Už víte co je v myčce, na ledničce a u sporáku?
+</p>
+<p class="text-justify">
+    Nyní se přesouváme do obýváku. Jako první vidíte svojí rodinu běhat po židlích
+    kolem jídelního stolu. Čím šílenější, tím si to lépe zapamatujete.
+    <br/>
+    Vaše televize je prostor pro přemýšlení, za mě, já přemýšlím jak ji lidé mohou
+    delší dobu sledovat v dneěním světě internetu. Televize ovlivňuje naše myšlení,
+    představte si že přemýšlí, co vám dalšího napere do vašich zornic.
+    <br/>
+    V rohu na vás číhá rotoped, dali jste si závazek, že na něm budete běhat,
+    jste tedy k němu přivázani tlustým lanem, ze kterého se nemůžete vymotat.
+</p>
+<p class="text-justify">
+    V ložnici máte zrcadlo, není to obyčejné zrcadlo. Jakmile se k němu přiblížíte,
+    vynoří se z něj ruka s balíkem peněz a pořádně vás s nimi praští.
+    Vaše finance jsou zrcadlem vaší produktivity.
+    <br/>
+    To, co pro vás představuje víru, dejte do skříně. Nezapomeňte použít princip SEE.
+    <br/>
+    Vaše vztahy uložte na postel. Jasně, tady si udělejte vlastní obrázek.
+</p>
+<p class="text-justify">
+    Poslední místností je koupelna. Jakmile pohladíte vaš vanu a otevřete špunt,
+    vyletí z něj genie, který vám splní vaše přání. Je tady, aby vám připoměl štědrost.
+    <br/>
+    Golden Shower. Jakmile spustíte kohoutek vaší sprchy, začne na vás pršet zlato.
+    Zlato má velkou hodnotu, tím vám připomíná hodnoty.
+    <br/>
+    Z vaší toalety začíná růst strom, díky vám zde převládá růst.
 </p>
 <p class="text-justify"></p>
     </div>
