UM part 2 complete

--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -780,6 +780,14 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     <br/>
     Z vaší toalety začíná růst strom, díky vám zde převládá růst.
 </p>
+<p class="text-justify">
+    Super, tohle je vaše první cesta, a měla by vám pootevřít vrátka, jak je vaše
+    mysl vlastně super. Naučili jste se 12 abstraktních pojmů jenom tím, že jste se
+    prošli mým domem. Pokud jste je dobře propojili, budete si je pamatovat i zítra
+    či pozítří. Navíc, použijete-li prostředí, které sami velmi dobře znát, získáte
+    ještě lepší výsledky.
+</p>
+<p class="text-justify"></p>
 <p class="text-justify"></p>
     </div>
 
