--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -787,7 +787,9 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     či pozítří. Navíc, použijete-li prostředí, které sami velmi dobře znát, získáte
     ještě lepší výsledky.
 </p>
-<p class="text-justify"></p>
+<p class="text-justify">
+    
+</p>
 <p class="text-justify"></p>
     </div>
 
