additional UM tweaks

--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -601,7 +601,7 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     Rýmovací PEG a Tvarová PEG. Nezapomeňte, že vaše pegy musí být součástí vaší
     LTM aby fungovaly. Získáme tedy šatník, ve kterém zavěsíme pegy v daném pořadí.
 </p>
-<p>
+<p><strong>
     Jedna se rýmuje s Bedna (One-Bun)
     <br/>
     Dva - Bitva (Two-Shoe)
@@ -621,14 +621,14 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     Devět - Medvěd (Nine-Vine)
     <br/>
     Deset - Viset (Ten-Hen)
-</p>
+</strong></p>
 <p class="text-justify">
     Nyní pomocí SEE si přiřaďte tyto slova k číslům. V knize Antony Robbina - 
     Awaken the Giant Within, se mluví o Deseti Emocích Síly. Zapamatujte si je,
     můžete se zdokonalovat jen tehdy když si pamatujete, jak se podle toho chovat.
 </p>
 <p>
-    Tyto Emoce Síly jsou následující:<br/>
+    Tyto Emoce Síly jsou následující:<br/><strong>
     1. Láska a vřelost (Love and warmth)<br/>
     2. Uznání a vděk (Appreciation and gratitude)<br/>
     3. Zvědavost (Curiosity)<br/>
@@ -638,7 +638,7 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     7. Smělost (Confidence)<br/>
     8. Veselost (Cheerfulness)<br/>
     9. Vitalita (Vitality)<br/>
-    10.Přínos (Contribution)<br/>
+    10.Přínos (Contribution)<br/></strong>
 </p>
 <p class="text-justify">
     Vytvořte nelogické obrazy SEE společně se silnými asociacemi. Vyhraďte si čas
@@ -788,7 +788,9 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     ještě lepší výsledky.
 </p>
 <p class="text-justify">
-    
+    Pokud se pokusíte celou cestu absolvovat pozpátku, zjistíte, že to pro vás není
+    žádný problém. Takže, najděte si svou cestu či místo a nezapomeňte na následující.
+    Musí mít pro vás významné, musí být rozmanité, a musí to být zábava !
 </p>
 <p class="text-justify"></p>
     </div>
