--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -792,7 +792,33 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     žádný problém. Takže, najděte si svou cestu či místo a nezapomeňte na následující.
     Musí mít pro vás významné, musí být rozmanité, a musí to být zábava !
 </p>
-<p class="text-justify"></p>
+<h1 id="sec4">
+    4. Propojení
+</h1>
+<p class="text-justify">
+    Naše mysli se učí pomocí asociací. Nezapomeňte, že se učíme tvořením spojení mezi
+    známým a neznámým.
+</p>
+<p class="text-justify">
+    Pojďme se podívat, jak si lze vcelku jednoduše pamatovat čísla.
+    <strong>
+    0 - s,z,c<br/>
+    1 - t,t´,d,h<br/>
+    2 - n<br/>
+    3 - m<br/>
+    4 - r,ř<br/>
+    5 - l,j<br/>
+    6 - ž,š,č,dž,g<br/>
+    7 - k,ch<br/>
+    8 - v,f<br/>
+    9 - b,p<br/>
+    </strong>
+</p>
+<p class="text-justify">
+    0 - syčí vám pneumatika, 1 - tvar písmene, 2 - položte dvojku na bok<br/>
+    3 - vypadá jako m, 4 - čtyŘi, 5 - jako j a l je podobné j, 6 - něco musím vymyslet<br/>
+    7 - hranaté c a kousek k, 8 - psací f vypadá jako osm, 9 - vypadá jako b,p
+</p>
     </div>
 
 
