--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -793,7 +793,7 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     Musí mít pro vás významné, musí být rozmanité, a musí to být zábava !
 </p>
 <h1 id="sec4">
-    4. Propojení
+    4. Čísla
 </h1>
 <p class="text-justify">
     Naše mysli se učí pomocí asociací. Nezapomeňte, že se učíme tvořením spojení mezi
@@ -808,7 +808,7 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     3 - m<br/>
     4 - r,ř<br/>
     5 - l,j<br/>
-    6 - ž,š,č,dž,g<br/>
+    6 - ž,š,č,dž,džej,g<br/>
     7 - k,ch<br/>
     8 - v,f<br/>
     9 - b,p<br/>
@@ -818,6 +818,25 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     0 - syčí vám pneumatika, 1 - tvar písmene, 2 - položte dvojku na bok<br/>
     3 - vypadá jako m, 4 - čtyŘi, 5 - jako j a l je podobné j, 6 - něco musím vymyslet<br/>
     7 - hranaté c a kousek k, 8 - psací f vypadá jako osm, 9 - vypadá jako b,p
+</p>
+<p class="text-justify">
+    Teď zkusme nějaká čísla:<br/>
+    98 - páv   154 - halíř   1685 - dídžej fólie
+</p>
+<p class="text-justify">
+    O co jde... Snažíte se z čísla udělat slovo. Nehleďte na to jak se píše,
+    ale jak zní (proto jsem džej přidal k šestce). mezi jednotlivé zvuky vkládejte
+    jakoukoliv samohlásku. Chce to praxi, sám to ještě neovládám, je to jako učit
+    se novou řeč. Každopádně je jistě lepší si pamatovat slovo oproti shluku čísel.
+</p>
+<p class="text-justify">
+    Co je za číslo: Maturita je benč, jó mě jebe! To je přeci zábavnější než si
+    pamatovat 3,14159265359. Je jedno, že to je kravina, stále lepší než sled
+    čísel.
+</p>
+<p class="text-justify">
+    Můžete si i vymyslet vlastní list od 1 do sta, který může dále sloužit jako
+    další list pro vaši paměť.
 </p>
     </div>
 
