--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -60,6 +60,7 @@
         </div>
     </nav>
     <div class="wrapper">
+        <div class="header header-filter" style="background-image: url('https://images.unsplash.com/photo-1423655156442-ccc11daa4e99?crop=entropy&amp;dpr=2&amp;fit=crop&amp;fm=jpg&amp;h=750&amp;ixjsv=2.1.0&amp;ixlib=rb-0.3.5&amp;q=50&amp;w=1450');">
         <div class="main main-raised">
             <div class="section">
                 <div class="container-fluid">
@@ -84,6 +85,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 </body>
